# generate_trajectory

./: CMakeLists.txt  README.md  package.xml
include/generate_trajectory/: trajectory_generator.hpp
launch/: generate_trajectory.launch
scripts/: trajectory_generator_client.py
src/: trajectory_generator_server.cpp
src/generate_trajectory/: trajectory_generator.cpp
srv/: GenerateTrajectory.srv
