<?xml version="1.0"?>
<package format="2">
  <name>generate_trajectory</name>
  <version>0.0.0</version>
  <description>The generate_trajectory package</description>

  <maintainer email="cruciani@kth.se">silvia</maintainer>


  <license>MIT</license>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>trajectory_msgs</build_depend>  
  <build_depend>message_generation</build_depend>
  <build_depend>joint_trajectory_generator</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>trajectory_msgs</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>trajectory_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>joint_trajectory_generator</exec_depend>

</package>
